TP2/src/Parse.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.1.1 from src/Parse.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parseStmt -> Def                            (0)
	%start_parseStmts -> Defs                          (1)
	%start_term -> Exp                                 (2)
	Def -> Defexp                                      (3)
	Def -> Exp                                         (4)
	Defexp -> DEF VAR '=' Exp                          (5)
	Exp -> '\\' VAR ':' Type '.' Exp                   (6)
	Exp -> 'let' VAR '=' Exp 'in' Exp                  (7)
	Exp -> RExp                                        (8)
	RExp -> 'R' Atom Atom Atom                         (9)
	RExp -> RLExp                                      (10)
	RLExp -> 'RL' Atom Atom Atom                       (11)
	RLExp -> ConsExp                                   (12)
	ConsExp -> 'cons' Atom Atom                        (13)
	ConsExp -> SuccExp                                 (14)
	SuccExp -> 'succ' SuccExp                          (15)
	SuccExp -> NAbs                                    (16)
	NAbs -> NAbs Atom                                  (17)
	NAbs -> Atom                                       (18)
	Atom -> VAR                                        (19)
	Atom -> '0'                                        (20)
	Atom -> 'nil'                                      (21)
	Atom -> '(' Exp ')'                                (22)
	Type -> TYPEE                                      (23)
	Type -> 'Nat'                                      (24)
	Type -> 'List' 'Nat'                               (25)
	Type -> Type '->' Type                             (26)
	Type -> '(' Type ')'                               (27)
	Defs -> Defexp Defs                                (28)
	Defs ->                                            (29)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'='            { TEquals }
	':'            { TColon }
	'let'          { TLet }
	'0'            { TZero }
	'succ'         { TSuc }
	'List'         { TList }
	'nil'          { TNil }
	'cons'         { TCons }
	'RL'           { TRL }
	'in'           { TIn }
	'\\'           { TAbs }
	'Nat'          { TNat }
	'R'            { TRec }
	'.'            { TDot }
	'('            { TOpen }
	')'            { TClose }
	'->'           { TArrow }
	VAR            { TVar $$ }
	TYPEE          { TTypeE }
	DEF            { TDef }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parseStmt rule  0
	%start_parseStmts rule  1
	%start_term     rule  2
	Def             rules 3, 4
	Defexp          rule  5
	Exp             rules 6, 7, 8
	RExp            rules 9, 10
	RLExp           rules 11, 12
	ConsExp         rules 13, 14
	SuccExp         rules 15, 16
	NAbs            rules 17, 18
	Atom            rules 19, 20, 21, 22
	Type            rules 23, 24, 25, 26, 27
	Defs            rules 28, 29

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_parseStmt -> . Def                           (rule 0)

	'let'          shift, and enter state 13
	'0'            shift, and enter state 14
	'succ'         shift, and enter state 15
	'nil'          shift, and enter state 16
	'cons'         shift, and enter state 17
	'RL'           shift, and enter state 18
	'\\'           shift, and enter state 19
	'R'            shift, and enter state 20
	'('            shift, and enter state 21
	VAR            shift, and enter state 22
	DEF            shift, and enter state 5

	Def            goto state 25
	Defexp         goto state 4
	Exp            goto state 26
	RExp           goto state 7
	RLExp          goto state 8
	ConsExp        goto state 9
	SuccExp        goto state 10
	NAbs           goto state 11
	Atom           goto state 12

State 1

	%start_parseStmts -> . Defs                         (rule 1)

	DEF            shift, and enter state 5
	%eof           reduce using rule 29

	Defexp         goto state 23
	Defs           goto state 24

State 2

	%start_term -> . Exp                                (rule 2)

	'let'          shift, and enter state 13
	'0'            shift, and enter state 14
	'succ'         shift, and enter state 15
	'nil'          shift, and enter state 16
	'cons'         shift, and enter state 17
	'RL'           shift, and enter state 18
	'\\'           shift, and enter state 19
	'R'            shift, and enter state 20
	'('            shift, and enter state 21
	VAR            shift, and enter state 22

	Exp            goto state 6
	RExp           goto state 7
	RLExp          goto state 8
	ConsExp        goto state 9
	SuccExp        goto state 10
	NAbs           goto state 11
	Atom           goto state 12

State 3

	Def -> . Defexp                                     (rule 3)

	DEF            shift, and enter state 5

	Defexp         goto state 4

State 4

	Def -> Defexp .                                     (rule 3)

	%eof           reduce using rule 3


State 5

	Defexp -> DEF . VAR '=' Exp                         (rule 5)

	VAR            shift, and enter state 36


State 6

	%start_term -> Exp .                                (rule 2)

	%eof           accept


State 7

	Exp -> RExp .                                       (rule 8)

	'in'           reduce using rule 8
	')'            reduce using rule 8
	DEF            reduce using rule 8
	%eof           reduce using rule 8


State 8

	RExp -> RLExp .                                     (rule 10)

	'in'           reduce using rule 10
	')'            reduce using rule 10
	DEF            reduce using rule 10
	%eof           reduce using rule 10


State 9

	RLExp -> ConsExp .                                  (rule 12)

	'in'           reduce using rule 12
	')'            reduce using rule 12
	DEF            reduce using rule 12
	%eof           reduce using rule 12


State 10

	ConsExp -> SuccExp .                                (rule 14)

	'in'           reduce using rule 14
	')'            reduce using rule 14
	DEF            reduce using rule 14
	%eof           reduce using rule 14


State 11

	SuccExp -> NAbs .                                   (rule 16)
	NAbs -> NAbs . Atom                                 (rule 17)

	'0'            shift, and enter state 14
	'nil'          shift, and enter state 16
	'in'           reduce using rule 16
	'('            shift, and enter state 21
	')'            reduce using rule 16
	VAR            shift, and enter state 22
	DEF            reduce using rule 16
	%eof           reduce using rule 16

	Atom           goto state 35

State 12

	NAbs -> Atom .                                      (rule 18)

	'0'            reduce using rule 18
	'nil'          reduce using rule 18
	'in'           reduce using rule 18
	'('            reduce using rule 18
	')'            reduce using rule 18
	VAR            reduce using rule 18
	DEF            reduce using rule 18
	%eof           reduce using rule 18


State 13

	Exp -> 'let' . VAR '=' Exp 'in' Exp                 (rule 7)

	VAR            shift, and enter state 34


State 14

	Atom -> '0' .                                       (rule 20)

	'0'            reduce using rule 20
	'nil'          reduce using rule 20
	'in'           reduce using rule 20
	'('            reduce using rule 20
	')'            reduce using rule 20
	VAR            reduce using rule 20
	DEF            reduce using rule 20
	%eof           reduce using rule 20


State 15

	SuccExp -> 'succ' . SuccExp                         (rule 15)

	'0'            shift, and enter state 14
	'succ'         shift, and enter state 15
	'nil'          shift, and enter state 16
	'('            shift, and enter state 21
	VAR            shift, and enter state 22

	SuccExp        goto state 33
	NAbs           goto state 11
	Atom           goto state 12

State 16

	Atom -> 'nil' .                                     (rule 21)

	'0'            reduce using rule 21
	'nil'          reduce using rule 21
	'in'           reduce using rule 21
	'('            reduce using rule 21
	')'            reduce using rule 21
	VAR            reduce using rule 21
	DEF            reduce using rule 21
	%eof           reduce using rule 21


State 17

	ConsExp -> 'cons' . Atom Atom                       (rule 13)

	'0'            shift, and enter state 14
	'nil'          shift, and enter state 16
	'('            shift, and enter state 21
	VAR            shift, and enter state 22

	Atom           goto state 32

State 18

	RLExp -> 'RL' . Atom Atom Atom                      (rule 11)

	'0'            shift, and enter state 14
	'nil'          shift, and enter state 16
	'('            shift, and enter state 21
	VAR            shift, and enter state 22

	Atom           goto state 31

State 19

	Exp -> '\\' . VAR ':' Type '.' Exp                  (rule 6)

	VAR            shift, and enter state 30


State 20

	RExp -> 'R' . Atom Atom Atom                        (rule 9)

	'0'            shift, and enter state 14
	'nil'          shift, and enter state 16
	'('            shift, and enter state 21
	VAR            shift, and enter state 22

	Atom           goto state 29

State 21

	Atom -> '(' . Exp ')'                               (rule 22)

	'let'          shift, and enter state 13
	'0'            shift, and enter state 14
	'succ'         shift, and enter state 15
	'nil'          shift, and enter state 16
	'cons'         shift, and enter state 17
	'RL'           shift, and enter state 18
	'\\'           shift, and enter state 19
	'R'            shift, and enter state 20
	'('            shift, and enter state 21
	VAR            shift, and enter state 22

	Exp            goto state 28
	RExp           goto state 7
	RLExp          goto state 8
	ConsExp        goto state 9
	SuccExp        goto state 10
	NAbs           goto state 11
	Atom           goto state 12

State 22

	Atom -> VAR .                                       (rule 19)

	'0'            reduce using rule 19
	'nil'          reduce using rule 19
	'in'           reduce using rule 19
	'('            reduce using rule 19
	')'            reduce using rule 19
	VAR            reduce using rule 19
	DEF            reduce using rule 19
	%eof           reduce using rule 19


State 23

	Defs -> Defexp . Defs                               (rule 28)

	DEF            shift, and enter state 5
	%eof           reduce using rule 29

	Defexp         goto state 23
	Defs           goto state 27

State 24

	%start_parseStmts -> Defs .                         (rule 1)

	%eof           accept


State 25

	%start_parseStmt -> Def .                           (rule 0)

	%eof           accept


State 26

	Def -> Exp .                                        (rule 4)

	%eof           reduce using rule 4


State 27

	Defs -> Defexp Defs .                               (rule 28)

	%eof           reduce using rule 28


State 28

	Atom -> '(' Exp . ')'                               (rule 22)

	')'            shift, and enter state 43


State 29

	RExp -> 'R' Atom . Atom Atom                        (rule 9)

	'0'            shift, and enter state 14
	'nil'          shift, and enter state 16
	'('            shift, and enter state 21
	VAR            shift, and enter state 22

	Atom           goto state 42

State 30

	Exp -> '\\' VAR . ':' Type '.' Exp                  (rule 6)

	':'            shift, and enter state 41


State 31

	RLExp -> 'RL' Atom . Atom Atom                      (rule 11)

	'0'            shift, and enter state 14
	'nil'          shift, and enter state 16
	'('            shift, and enter state 21
	VAR            shift, and enter state 22

	Atom           goto state 40

State 32

	ConsExp -> 'cons' Atom . Atom                       (rule 13)

	'0'            shift, and enter state 14
	'nil'          shift, and enter state 16
	'('            shift, and enter state 21
	VAR            shift, and enter state 22

	Atom           goto state 39

State 33

	SuccExp -> 'succ' SuccExp .                         (rule 15)

	'in'           reduce using rule 15
	')'            reduce using rule 15
	DEF            reduce using rule 15
	%eof           reduce using rule 15


State 34

	Exp -> 'let' VAR . '=' Exp 'in' Exp                 (rule 7)

	'='            shift, and enter state 38


State 35

	NAbs -> NAbs Atom .                                 (rule 17)

	'0'            reduce using rule 17
	'nil'          reduce using rule 17
	'in'           reduce using rule 17
	'('            reduce using rule 17
	')'            reduce using rule 17
	VAR            reduce using rule 17
	DEF            reduce using rule 17
	%eof           reduce using rule 17


State 36

	Defexp -> DEF VAR . '=' Exp                         (rule 5)

	'='            shift, and enter state 37


State 37

	Defexp -> DEF VAR '=' . Exp                         (rule 5)

	'let'          shift, and enter state 13
	'0'            shift, and enter state 14
	'succ'         shift, and enter state 15
	'nil'          shift, and enter state 16
	'cons'         shift, and enter state 17
	'RL'           shift, and enter state 18
	'\\'           shift, and enter state 19
	'R'            shift, and enter state 20
	'('            shift, and enter state 21
	VAR            shift, and enter state 22

	Exp            goto state 52
	RExp           goto state 7
	RLExp          goto state 8
	ConsExp        goto state 9
	SuccExp        goto state 10
	NAbs           goto state 11
	Atom           goto state 12

State 38

	Exp -> 'let' VAR '=' . Exp 'in' Exp                 (rule 7)

	'let'          shift, and enter state 13
	'0'            shift, and enter state 14
	'succ'         shift, and enter state 15
	'nil'          shift, and enter state 16
	'cons'         shift, and enter state 17
	'RL'           shift, and enter state 18
	'\\'           shift, and enter state 19
	'R'            shift, and enter state 20
	'('            shift, and enter state 21
	VAR            shift, and enter state 22

	Exp            goto state 51
	RExp           goto state 7
	RLExp          goto state 8
	ConsExp        goto state 9
	SuccExp        goto state 10
	NAbs           goto state 11
	Atom           goto state 12

State 39

	ConsExp -> 'cons' Atom Atom .                       (rule 13)

	'in'           reduce using rule 13
	')'            reduce using rule 13
	DEF            reduce using rule 13
	%eof           reduce using rule 13


State 40

	RLExp -> 'RL' Atom Atom . Atom                      (rule 11)

	'0'            shift, and enter state 14
	'nil'          shift, and enter state 16
	'('            shift, and enter state 21
	VAR            shift, and enter state 22

	Atom           goto state 50

State 41

	Exp -> '\\' VAR ':' . Type '.' Exp                  (rule 6)

	'List'         shift, and enter state 46
	'Nat'          shift, and enter state 47
	'('            shift, and enter state 48
	TYPEE          shift, and enter state 49

	Type           goto state 45

State 42

	RExp -> 'R' Atom Atom . Atom                        (rule 9)

	'0'            shift, and enter state 14
	'nil'          shift, and enter state 16
	'('            shift, and enter state 21
	VAR            shift, and enter state 22

	Atom           goto state 44

State 43

	Atom -> '(' Exp ')' .                               (rule 22)

	'0'            reduce using rule 22
	'nil'          reduce using rule 22
	'in'           reduce using rule 22
	'('            reduce using rule 22
	')'            reduce using rule 22
	VAR            reduce using rule 22
	DEF            reduce using rule 22
	%eof           reduce using rule 22


State 44

	RExp -> 'R' Atom Atom Atom .                        (rule 9)

	'in'           reduce using rule 9
	')'            reduce using rule 9
	DEF            reduce using rule 9
	%eof           reduce using rule 9


State 45

	Exp -> '\\' VAR ':' Type . '.' Exp                  (rule 6)
	Type -> Type . '->' Type                            (rule 26)

	'.'            shift, and enter state 56
	'->'           shift, and enter state 57


State 46

	Type -> 'List' . 'Nat'                              (rule 25)

	'Nat'          shift, and enter state 55


State 47

	Type -> 'Nat' .                                     (rule 24)

	'.'            reduce using rule 24
	')'            reduce using rule 24
	'->'           reduce using rule 24


State 48

	Type -> '(' . Type ')'                              (rule 27)

	'List'         shift, and enter state 46
	'Nat'          shift, and enter state 47
	'('            shift, and enter state 48
	TYPEE          shift, and enter state 49

	Type           goto state 54

State 49

	Type -> TYPEE .                                     (rule 23)

	'.'            reduce using rule 23
	')'            reduce using rule 23
	'->'           reduce using rule 23


State 50

	RLExp -> 'RL' Atom Atom Atom .                      (rule 11)

	'in'           reduce using rule 11
	')'            reduce using rule 11
	DEF            reduce using rule 11
	%eof           reduce using rule 11


State 51

	Exp -> 'let' VAR '=' Exp . 'in' Exp                 (rule 7)

	'in'           shift, and enter state 53


State 52

	Defexp -> DEF VAR '=' Exp .                         (rule 5)

	DEF            reduce using rule 5
	%eof           reduce using rule 5


State 53

	Exp -> 'let' VAR '=' Exp 'in' . Exp                 (rule 7)

	'let'          shift, and enter state 13
	'0'            shift, and enter state 14
	'succ'         shift, and enter state 15
	'nil'          shift, and enter state 16
	'cons'         shift, and enter state 17
	'RL'           shift, and enter state 18
	'\\'           shift, and enter state 19
	'R'            shift, and enter state 20
	'('            shift, and enter state 21
	VAR            shift, and enter state 22

	Exp            goto state 61
	RExp           goto state 7
	RLExp          goto state 8
	ConsExp        goto state 9
	SuccExp        goto state 10
	NAbs           goto state 11
	Atom           goto state 12

State 54

	Type -> Type . '->' Type                            (rule 26)
	Type -> '(' Type . ')'                              (rule 27)

	')'            shift, and enter state 60
	'->'           shift, and enter state 57


State 55

	Type -> 'List' 'Nat' .                              (rule 25)

	'.'            reduce using rule 25
	')'            reduce using rule 25
	'->'           reduce using rule 25


State 56

	Exp -> '\\' VAR ':' Type '.' . Exp                  (rule 6)

	'let'          shift, and enter state 13
	'0'            shift, and enter state 14
	'succ'         shift, and enter state 15
	'nil'          shift, and enter state 16
	'cons'         shift, and enter state 17
	'RL'           shift, and enter state 18
	'\\'           shift, and enter state 19
	'R'            shift, and enter state 20
	'('            shift, and enter state 21
	VAR            shift, and enter state 22

	Exp            goto state 59
	RExp           goto state 7
	RLExp          goto state 8
	ConsExp        goto state 9
	SuccExp        goto state 10
	NAbs           goto state 11
	Atom           goto state 12

State 57

	Type -> Type '->' . Type                            (rule 26)

	'List'         shift, and enter state 46
	'Nat'          shift, and enter state 47
	'('            shift, and enter state 48
	TYPEE          shift, and enter state 49

	Type           goto state 58

State 58

	Type -> Type . '->' Type                            (rule 26)
	Type -> Type '->' Type .                            (rule 26)

	'.'            reduce using rule 26
	')'            reduce using rule 26
	'->'           shift, and enter state 57


State 59

	Exp -> '\\' VAR ':' Type '.' Exp .                  (rule 6)

	'in'           reduce using rule 6
	')'            reduce using rule 6
	DEF            reduce using rule 6
	%eof           reduce using rule 6


State 60

	Type -> '(' Type ')' .                              (rule 27)

	'.'            reduce using rule 27
	')'            reduce using rule 27
	'->'           reduce using rule 27


State 61

	Exp -> 'let' VAR '=' Exp 'in' Exp .                 (rule 7)

	'in'           reduce using rule 7
	')'            reduce using rule 7
	DEF            reduce using rule 7
	%eof           reduce using rule 7


-----------------------------------------------------------------------------
Grammar Totals
-----------------------------------------------------------------------------
Number of rules: 30
Number of terminals: 20
Number of non-terminals: 14
Number of states: 62
